# parkinsons-voice-classification

./: .gitignore  AGENTS.md  Makefile  README.md  SUMMARY.md  TODO  pyproject.toml
.github/agents/: thesis-writer.agent.md
.github/instructions/: latex-chapters.instructions.md
demo_app/: AGENTS.md  README.md  app.py  audio_utils.py  feature_metadata.py  inference_adapter.py
demo_app/templates/: about.html  index.html  result.html
docs/: CHAPTER_4_METHODOLOGY.md  CHAPTER_6_RESULTS.md  CHAPTER_7_DISCUSSION.md  CLI_REFERENCE.md  DATASET_MDVR_KCL.md  DATASET_PD_SPEECH_FEATURES.md  METHODOLOGY.md  SCOPE_AND_LIMITATIONS.md  THESIS_WRITING_GUIDE.md  WEB_APP_ARCHITECTURE.md  summary_report.md
docs/v1/: CHAPTER_3_DATA_DESCRIPTION.md  CHAPTER_4_METHODOLOGY.md  CHAPTER_5_EXPERIMENTAL_DESIGN.md  CHAPTER_6_RESULTS.md  CHAPTER_7_DISCUSSION.md  CHAPTER_8_LIMITATIONS.md
docs/v2/: APPENDIX_A_FEATURE_IMPORTANCE.md  APPENDIX_B_DETAILED_RESULTS.md  CHAPTERS_1_2_3_4_5_6.docx  CHAPTER_1_INTRODUCTION.md  CHAPTER_2_LITERATURE_REVIEW.md  CHAPTER_3_DATA_DESCRIPTION.md  CHAPTER_4_METHODOLOGY.md  CHAPTER_5_EXPERIMENTAL_DESIGN.md  CHAPTER_6_RESULTS.md  CHAPTER_7_DISCUSSION.md  CHAPTER_8_LIMITATIONS.md  CHAPTER_9_CONCLUSION.md  DEPRECATED.md
outputs/: .gitkeep
outputs/models/: RandomForest_ReadText_baseline_metadata.json
scripts/: generate_confusion_matrices.py  sync_figures.py
thesis/: .gitignore  AGENTS.md  Preamble.tex  README.md  clean_build.sh  main.tex  ntua-thesis.cls  thesis-guide.md
thesis_template_gr_latex/: diploma_body.tex  diploma_thesis.tex
(+60 files in other folders)
