[tool.poetry]
name = "parkinsons-voice-classification"
version = "0.1.0"
description = "Master's thesis: Parkinson's Disease classification from voice data using classical machine learning"
authors = ["Author Name <author@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "parkinsons_voice_classification", from = "src"}]

[tool.poetry.scripts]
pvc-extract = "parkinsons_voice_classification.cli.extract_features:main"
pvc-experiment = "parkinsons_voice_classification.cli.run_experiments:main"
pvc-importance = "parkinsons_voice_classification.cli.feature_importance:main"
pvc-train = "parkinsons_voice_classification.cli.train_model:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.1"
scipy = "^1.11"
scikit-learn = "^1.3"
librosa = "^0.10"
praat-parselmouth = "^0.4"
tqdm = "^4.66"
matplotlib = "^3.8"

[tool.poetry.extras]
demo = ["flask"]

[tool.poetry.group.demo]
optional = true

[tool.poetry.group.demo.dependencies]
flask = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
ipython = "^8.18"
black = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
